# patent_client

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Pipfile  README.md  README.rst  cache.sqlite  conftest.py  mypy.ini  mypy_bug.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  sample.xml  scratch.ipynb  setup.cfg  setup.py  test  tox.ini  unasync.py
.github/workflows/: build.yaml  deploy.yaml
cassettes/README/: README.md.yaml
ci/: bootstrap.py
deprecated/: edis.py
deprecated/epo_ops/: claims.py  integration_test.py  ops.py  parsers.py
docs/: api.md  assignments.md  changelog.md  conf.py  developer.md  epo.md  examples.md  fulltext.md  getting_started.md  index.md  migration_guide.md  ptab.md  us_application.md  user_guide.md
docs/api/: base.md  epo.md  uspto.md
docs/api/epo/: epo.published.md
docs/api/uspto/: assignment.md  bulk_data.md  fulltext.md  global_dossier.md  open_data_portal.md  peds.md  ptab.md
docs/cassettes/: getting_started.md.yaml
docs/cassettes/epo/: epo.md.yaml
docs/cassettes/fulltext/: fulltext.md.yaml
docs/cassettes/getting_started/: getting_started.md.yaml
docs/cassettes/us_application/: us_application.md.yaml
docs/developer/: design_notes.md  overview.md
docs/developer/cassettes/: overview.md.yaml
docs/examples/: 1 - Introduction.ipynb  2 - Patent Expiration Dates.ipynb  3 - Company Ownership.ipynb  4 - Examiner Monitor.ipynb  5 - Generate Continuity Graph.ipynb  README.md  codes.xlsx
docs/modules/: patent_client.conftest.rst  patent_client.epo.ops.family.api.rst  patent_client.epo.ops.family.api_test.rst  patent_client.epo.ops.family.manager.rst  patent_client.epo.ops.family.model.rst  patent_client.epo.ops.family.rst  patent_client.epo.ops.family.schema.rst  patent_client.epo.ops.family.schema_test.rst  patent_client.epo.ops.legal.api.rst  patent_client.epo.ops.legal.api_test.rst  patent_client.epo.ops.legal.manager.rst  patent_client.epo.ops.legal.model.rst  patent_client.epo.ops.legal.national_codes.rst  patent_client.epo.ops.legal.rst  patent_client.epo.ops.legal.schema.rst  patent_client.epo.ops.legal.schema_test.rst  patent_client.epo.ops.legal.util.rst  patent_client.epo.ops.manager.rst  patent_client.epo.ops.number_service.api.rst  patent_client.epo.ops.number_service.api_test.rst  patent_client.epo.ops.number_service.errors.rst  patent_client.epo.ops.number_service.model.rst  patent_client.epo.ops.number_service.rst  patent_client.epo.ops.number_service.schema.rst  patent_client.epo.ops.published.api.rst  patent_client.epo.ops.published.api_test.rst  patent_client.epo.ops.published.cql.rst  patent_client.epo.ops.published.integration_test.rst  patent_client.epo.ops.published.manager.rst  patent_client.epo.ops.published.model.biblio.rst  patent_client.epo.ops.published.model.fulltext.rst  patent_client.epo.ops.published.model.images.rst  patent_client.epo.ops.published.model.rst  patent_client.epo.ops.published.model.search.rst  patent_client.epo.ops.published.rst  patent_client.epo.ops.published.schema.biblio.rst  patent_client.epo.ops.published.schema.fulltext.rst  patent_client.epo.ops.published.schema.images.rst  patent_client.epo.ops.published.schema.rst  patent_client.epo.ops.published.schema.search.rst  (+69 more)
docs/source/: assignments.rst  conf.py  epo.rst  fulltext.rst  getting_started.rst  index.rst  ptab.rst  us_application.rst  usitc.rst
docs/source/developer/: design_notes.rst  overview.rst
docs/user_guide/: assignments.md  asyncio.md  bulk_data.md  epo.md  fulltext.md  general.md  global_dossier.md  installation.md  introduction.md  open_data_portal.md  peds.md  products.csv  ptab.md  us_application.md  usitc.md
docs/user_guide/cassettes/: assignments.md.yaml  epo.md.yaml  fulltext.md.yaml  global_dossier.md.yaml  us_application.md.yaml
examples/: 1 - Introduction.ipynb  2 - Patent Expiration Dates.ipynb  3 - Company Ownership.ipynb  4 - Examiner Monitor.ipynb  5 - Generate Continuity Graph.ipynb  Docketing.ipynb  Scratchpad.ipynb
inpadoc/: lookups.py  schema.py
inpadoc/inpadoc/: manager.py  test_manager.py
old_docs/source/: api.rst  assignments.md  assignments.rst  conf.py  epo.md  fulltext.md  fulltext.rst  index.md  index.rst  motivation.md  motivation.rst  us_application.md  usitc.md  usitc.rst
old_docs/source/developer/: design_notes.rst  overview.md
patent_client/: __init__.py  conftest.py  default_settings.yml  odp.py  parser.py  patches.py  session.py  settings.py  version.py  warnings.py
patent_client/_async/: __init__.py  conftest.py  http_client.py  odp.py
patent_client/_async/epo/: auth.py  family.py  family_test.py  legal.py  legal_test.py  number_service.py  number_service_test.py  (+2 more)
patent_client/_sync/: __init__.py  conftest.py  http_client.py  odp.py
patent_client/uspto/: __init__.py
patent_client/util/: asyncio_util.py  cache.py  cache_test.py  hishel_util.py  lxml_util.py  manager.py  parser.py  pydantic_util.py  pydantic_util_test.py  test.py  test_parser.py
scripts/: clear_cassettes.py  run_unasync.py
src/: uspto_ptab2.py
src/deprecated/: assignments.py  assignments_test.py  test_uspto_ptab.py  uspto_peds_new.py  uspto_ptab.py
src/ip/: __init__.py  epo_ops.py  parser.py  uspto_assignments.py  uspto_exam_data.py  uspto_ptab.py  util.py
src/patent_client/: .readthedocs.yml  __init__.py  conftest.py  default_settings.json  default_settings.yml  epo_ops.py  itc_edis.py  parser.py  session.py  settings.py  test_parser.py  test_readme.py  uspto_assignments.py  uspto_exam_data.py  uspto_peds.py  uspto_ptab.py  util.py
test_base_dir/epo/: legal_code_descriptions_2024-02-0.xlsx  legal_code_descriptions_2024-05-0.xlsx
tests/: test_epo_ops.py  test_integration.py  test_ip.py  test_itc_edis.py  test_parser.py  test_readme.py  test_uspto_assignments.py  test_uspto_exam_data.py  test_uspto_ptab.py
tests/fixtures/: epo_ep.json  epo_pct.json
(+2137 files in other folders)
