[tool.poetry]
name = "patent_client"
version = "4.1.8"
description = "A set of ORM-style clients for publicly available intellectual property data"
authors = ["Parker Hancock <633163+parkerhancock@users.noreply.github.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
documentation = "https://patent-client.readthedocs.io"
homepage = "https://github.com/parkerhancock/patent_client"
repository = "https://github.com/parkerhancock/patent_client"

keywords = ["patent", "intellectual property", "usitc", "epo", "ops", "trademark", "inpadoc", "337"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]

exclude = ["./**/cassettes/**/*",]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Required Dependencies
lxml = "^4.9.0"
python-dateutil = "^2.8.2"
inflection = "^0.5.1"
openpyxl = "^3.0.10"
#yankee = {path="../yankee", develop=true}
yankee = "^0.1.43"
zipp = "^3.8.1"
httpx = {extras = ["http2"], version = "^0.25.2"}

pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pypdf = "^3.17.0"
hishel = "^0.0.20"
tqdm = "^4.66.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]

# Documentation Dependencies
furo                       = {optional=true, version="^2022.6"}
linkify-it-py              = {optional=true, version="^2.0"}
myst-parser                = {optional=true, version=">=0.17"}
sphinx                     = {optional=true, version="^5.0.2"}
sphinx-autodoc-typehints   = {optional=true, version="^1.19"}
sphinx-automodapi          = {optional=true, version=">=0.14"}
sphinx-copybutton          = {optional=true, version=">=0.5"}
sphinx-design              = {optional=true, version=">=0.2"}
sphinx-notfound-page       = {optional=true, version=">=0.8"}
sphinxcontrib-apidoc       = {optional=true, version="^0.3"}
sphinxcontrib-mermaid      = {optional=true, version="^0.7.1"}
nbsphinx                   = {optional=true, version="^0.8.9"}
IPython                    = {optional=true, version="^7.17.0"}
nest-asyncio = "^1.5.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
pytest-xdist = "^2.5.0"
black = {version = "^22.12.0", allow-prereleases = true}
pandas = "1.3.5"
pytest-asyncio = "^0.21.1"
ipykernel = "^6.26.0"
vcrpy = {git = "https://github.com/parkerhancock/vcrpy"}
mypy = "^1.6.1"

nox                   = "^2022.1.7"
nox-poetry            = "^1.0.0"
rich                  = ">=10.0"
sphinx-autobuild      = "^2021.3.14"
bump2version = "^1.0.1"
pytest-recording = "^0.13.1"


[tool.poetry.group.types.dependencies]
types-openpyxl = "^3.1.0.24"
types-python-dateutil = "^2.8.19.14"
pandas-stubs = "^2.1.1.230928"
types-ujson = "^5.8.0.1"
types-pyyaml = "^6.0.12.12"
types-lxml = "^2023.10.21"
types-urllib3 = "^1.26.25.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[scripts]
test = "pytest --basetemp=tmp"
render_docs = "make -f docs/Makefile html"

[tool.pycln]
all = true

[tool.isort]
profile = 'black'
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = '-ra --strict --doctest-modules --doctest-glob="*.md" --tb=short'
doctest_optionflags= [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS"
]
asyncio_mode = "auto"
markers = [
    "no_vcr: disable vcrpy recording",
]
