[project]
name = "patent_client"
version = "5.0.16"
description = "A set of ORM-style clients for publicly available intellectual property data"
authors = [{ name = "Parker Hancock", email = "633163+parkerhancock@users.noreply.github.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "patent",
    "intellectual property",
    "usitc",
    "epo",
    "ops",
    "trademark",
    "inpadoc",
    "337",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "lxml>=5.2.2,<6",
    "python-dateutil>=2.9.0.post0,<3",
    "openpyxl>=3.1.2,<4",
    "yankee>=0.1.46,<0.2",
    "pydantic>=2.7.1,<3",
    "pydantic-settings>=2.2.1,<3",
    "pypdf>=4.2.0,<5",
    "hishel>=0.0.26,<0.0.27",
    "async-property>=0.2.2,<0.3",
    "httpx[http2]>=0.27.0,<0.28",
    "inflection>=0.5.1,<0.6",
    "tenacity>=9.0.0",
    "xmltodict>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/parkerhancock/patent_client"
Repository = "https://github.com/parkerhancock/patent_client"
Documentation = "https://patent-client.readthedocs.io"

[dependency-groups]
docs = [
    "furo~=2022.6",
    "linkify-it-py~=2.0",
    "myst-parser>=0.17",
    "sphinx>=5.0.2,<6",
    "sphinx-autodoc-typehints~=1.19",
    "sphinx-automodapi>=0.14",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.2",
    "sphinx-notfound-page>=0.8",
    "sphinxcontrib-apidoc>=0.3,<0.4",
    "sphinxcontrib-mermaid>=0.7.1,<0.8",
    "nbsphinx>=0.8.9,<0.9",
    "IPython>=7.17.0,<8",
]
dev = [
    "pytest>=7.1.2,<8",
    "pytest-cov>=3.0.0,<4",
    "pre-commit>=2.19.0,<3",
    "pytest-xdist>=2.5.0,<3",
    "black>=22.12.0,<23",
    "pytest-asyncio>=0.21.1,<0.22",
    "ipykernel>=6.26.0,<7",
    "vcrpy",
    "mypy>=1.6.1,<2",
    "nox>=2022.1.7,<2023",
    "nox-poetry>=1.0.0,<2",
    "rich>=10.0",
    "sphinx-autobuild>=2021.3.14,<2022",
    "bump2version>=1.0.1,<2",
    "pytest-recording>=0.13.1,<0.14",
    "datamodel-code-generator>=0.25.5,<0.26",
    "openapi-python-client>=0.19.1,<0.20",
    "isort>=5.13.2,<6",
    "pandas>=2.2.3",
    "ruff>=0.3.7",
]
types = [
    "types-openpyxl>=3.1.0.24,<4",
    "types-python-dateutil>=2.8.19.14,<3",
    "pandas-stubs>=2.1.1.230928,<3",
    "types-ujson>=5.8.0.1,<6",
    "types-pyyaml>=6.0.12.12,<7",
    "types-lxml>=2023.10.21,<2024",
    "types-urllib3>=1.26.25.14,<2",
]

[tool.uv]
default-groups = [
    "docs",
    "dev",
    "types",
]

[tool.uv.sources]
vcrpy = { git = "https://github.com/parkerhancock/vcrpy" }

[tool.hatch.build.targets.sdist]
exclude = ["./**/cassettes/**/*"]

[tool.hatch.build.targets.wheel]
exclude = ["./**/cassettes/**/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[scripts]
test = "pytest --basetemp=tmp"
render_docs = "make -f docs/Makefile html"

[tool.pycln]
all = true

[tool.ruff]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = '-ra --strict-markers --doctest-modules --doctest-glob="*.md" --tb=short'
doctest_optionflags= [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS"
]
asyncio_mode = "auto"
markers = [
    "no_vcr: disable vcrpy recording",
]
